NTI-374 - Fix long link text not wrapping

--- a/src/main/js/content/components/Content.scss
+++ b/src/main/js/content/components/Content.scss
@@ -15,6 +15,9 @@ nti\:content {
 
 	a {
 		color: inherit; //fix foundation assuming all anchors are "links"
+		word-break: break-all;
+		word-wrap: break-word;
+
 		&[href], &:link {
 			color: $primary-blue;
 		}
